# greek-1000-exercises

./: .gitignore  README.md  chat-gpt-prompts.txt  dickinson-core.json  greek-1000.css  index.html  numerals.json  tobe-en-el.csv  tobe.csv
exercises/: noun_only_to_case_number_gender.csv  noun_only_to_case_number_gender.numbers  noun_to_case_number_gender.csv  noun_to_case_number_gender.numbers
pages/: mac-keyboard.md  quiz-1.html  quiz-1.js  quiz-1.json  verbs.json
pages/cards/: 1-pres-future-active-ind.html  1-pres-future-active-ind.md  2-1-desclension-nouns.html  2-1-desclension-nouns.md  3-2-declension-nouns.md  regular-verbs.md  settings.json  αθάνατος.md  βλάπτω.md  δέκατος.md  εὐδαίμων.md  μέγας.md  πολέμῐος.md  πολύς.md  σώφρων.md  τάλας.md  ψευδής.md  ἀληθής.md  ἀσφαλής.md  ἄδικος.md  ἄλλος.md  ἄξιος.md
pages/chapter-3/: csvtraspose  declension.css  declension.js  declensions.html  declensions.json  declensions.md  example.json
pages/chapters-1-4/: Introduction to Greek 1 to 8.docx  basics.docx  basics.md  nouns.json  nouns.md  other.md  verbs.md  (+2 more)
script/: json_to_verb_md  lookup  pyproject.toml  reverse_nouns  utils.py
vocab/: adjectives.json  adjectives.yaml  adverbs.json  adverbs.yaml  all_vocab.csv  anka-vocab-7.csv  anka-vocab-8-form-to-translation.csv  anka-vocab-8-translation-to-form.csv  chapter-6.csv  chapter11.csv  conjuntions.json  conjuntions.yaml  exclamations.json  exclamations.yaml  nouns-1-6.csv  nouns.json  nouns.yaml  particles.json  prepositions.json  prepositions.yaml  pronouns.json  pronouns.yaml  verbs.json  verbs.yaml
(+154 files in other folders)
