[tool.poetry]
name = "script"
version = "0.1.0"
description = "Greek scripts"
authors = ["Will Fitzgerald <37049+willf@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
betacode = "^1.0"
pygtrie = "^2.5.0"
requests = "^2.31.0"
xmltodict = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"
isort = "^5.12.0"
coverage = "^7.3.2"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
